Remove usage of getFirst that is only available for Java21